--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -24,80 +24,51 @@ There were some common patterns I saw, and I thought it would be useful to share
 
 Here are some of the headline mistakes that I've seen made, along with the quoted comments from the program committee when the reviewed the abstract in question…
 
-## Don’t be too smart for your own good. Fancy titles alone don’t suffice. 
-
-> Unclear what it is about. Speakers got lost in the nice allegory, completely missing the actual core content.
-
-> This talk could have been so amazing, but I have no idea what it's going to cover
-
-> Knowing the speakers I'm sure they have some interesting tech to share, but from the abstract I just can't tell what
-
-> Cute, but no detail as to why this talk would be interesting, what the basis for the talk is, technology involved, etc. 
-
-> Fun theming but they've missed out the detail...
+## A Good Title is Not Enough
 
 > best thing is the title. 
 
 > want to like this, but we need more in the abstract; cannot pick a session by title alone
 
-## The program committee are rooting for you to succeed - but a bad abstract is a bad abstract
+💁 TIP: Fancy titles alone don’t suffice. Your abstract needs to back up the title and be clear about what you're going to deliver in the talk. 
 
+## Smart is Fine, but Not at the Expense of Your Abstract
 
-> If you're going to copy & paste, at least remove the " In the webinar, " text first 🤦
+> Unclear what it is about. Speakers got lost in the nice allegory, completely missing the actual core content.
 
-> Too sparse, also we don't do webinars. It's a pity though, the speaker writes cool blog posts usually.
+> Cute, but no detail as to why this talk would be interesting, what the basis for the talk is, technology involved, etc. 
 
-> "Webinar"? Did you just copy & paste from another event my dude?
+> Fun theming but they've missed out the detail...
 
-> The topic is great but the abstract is poor.
+💁 TIP: Making your abstract jump out by giving it a good theme or story can be a winning formula — but only if coupled with a solid background and explanation too. Think of it as the icing on the cake. No-one wants to eat the whole bowl of icing itself.
 
-> this is not a webinar
+## The Program Committee Are Rooting for You to Succeed - but a Bad Abstract Is a Bad Abstract
 
-> reads as if written within 1 or 2 minutes. and no, it's not a *webinar* you are submitting for :(
+> Too sparse. It's a pity though, the speaker writes cool blog posts usually.
 
-> not and abstract and looks to be a copy/paste of one at that.
+> Knowing the speakers I'm sure they have some interesting tech to share, but from the abstract I just can't tell what
 
-> Not a webinar, no details.
+> This talk could have been so amazing, but I have no idea what it's going to cover
 
-> this abstract does not give me any confidence of quality content.
+💁 TIP: The program committee don't like rejecting talks. Almost all of them are conference speakers themselves. They _want_ to accept your talk. But if the abstract is badly written, if it's not clear what value your talk will bring, then it's not going to get accepted. 
 
-## Your clever title might actually not be so clever. Be conscious of its negative meanings and/or cultural resonances 
-
-
-> controversial title. 
+## Your Clever Title Might Actually Not Be so Clever 😬
 
 > I would not feel comfortable attending a talk with a suggestive title.
-
-> Very unclear what the focus of the talk will be.
 
 > the title creeps me out
 
 > Is the title’s reference appropriate for a tech conference?
 
-> Doesn't seem like a great speaker, and the title choice is really poor.
-
-> title should get rephrased. "noob" is problematic
-
-> agreed on great topic but needs a new title
-
-> Would like to see a different title, but I like the concept.
-
-> I don't think this title really works. 
-
 > If accepted, I recommend we re-title the talk to avoid negative wording against people learning a technology for the first time.
 
-> FTR not everyone loves being called a noob
+💁 TIP: Be conscious of your title's negative meanings and/or cultural resonances. A good example would be "_Make <x> Great Again_" which was a popular pattern for titles on the conference circuit in previous years. Basing your talk title on the https://en.wikipedia.org/wiki/Make_America_Great_Again#Use_by_Donald_Trump[campaign slogan of a controversial politician] might alienate some of your audience. 
 
-## You might think you don’t need to write much of an abstract, but the program committee will disagree
+Another example would be "From Zero to Hero"-esque titles (of which https://talks.rmoff.net/Itynf7[I've been guity] in the past). Some people may feel that referring to people new to a subject as "zeros" (and experts as "heros") doesn't necessarily help propogate the kind of respectful community we'd like. 
 
-
-> I think it _would_ fit in general, but it's too thin.
+## You Might Think You Don’t Need to Write Much of an Abstract, but the Program Committee Will Disagree
 
 > not enough information to accept
-
-> unfortunately, abstract isn't enough.
-
-> I've seen good talk from the submitter in the past. this abstract thought is rather condensed which is why I'm not convinced about this to be a breakout session.
 
 > Abstract's quite thin. It's a shame because I know speaker has some strong opinions on this topic and I'm curious about what they are. :-(
 
@@ -107,42 +78,13 @@ Here are some of the headline mistakes that I've seen made, along with the quote
 
 > Not enough detail in the abstract
 
-> not enough in the abtract
-
-> This abstract is short even for a lightning talk, let alone a breakout.
-
-> extremely compact abstract for my taste. topic is very important though.
-
-> Light abstract
-
-> Abstract doesn't give any detail. 
-
 > That's just not enough for an abstract. Which is sad, because I'm sure speaker has interesting things to tell. Really needs more detail to get me to bite.
-
-> This speaker really needs to write longer abstracts. I have no idea what we are accepting.
-
-> Vague
-
-> Not clear what to expect from it.
-
-> it's still unclear to me what the talk is about.
-
-> Would love to see a mention of ANY technology here.
-
-> details missing. either they didn't have them yet or they or disguising them - both not really good ways to convince reviewers :)
 
 > Super vague. Vague, vague, vague.
 
-> abstract doesn't really tell us anything other than finding insights with streams of events `¯\\_(ツ)_/¯`
+💁 TIP: *You* might know what you're going to talk about but the program committee are not telepathic! Writing a good abstract isn't always easy, but submitting something half-finished is not likely to get you accepted to the conference. 
 
-> Topic sounds intriguing, but not enough information to rate it highly
-
-> I am (potentially) interested, but I would need a more refined abstract to consider it.
-
-## Help the program committee and they will help you. Hinder them, and they might not!
-
-
-> Wall of text - struggling to understand what the attendee would get from the session
+## Help the Program Committee and They Will Help You. Hinder Them, and They Might Not!
 
 > huge text wall. hard to digest also the way it's written.
 
@@ -150,25 +92,19 @@ Here are some of the headline mistakes that I've seen made, along with the quote
 
 > Very unclear abstract. Hard to read (use line breaks!). Next time start from the point of the audience - what will they gain from this talk? Why would it be interesting to them? 
 
-## Make your abstract intelligible. Don’t make people have to play detective and make assumptions about what you’re talk is about
+💁 TIP: The program committee for a conference will usually have _hundreds_ of abstracts to review. Do them a favour and put them in a good mood by making your abstract well formatted and easy to read. Paragraph breaks, punctuation, and a sensible length (3-4 paragraphs max, usually) all help. 
 
+## Make Your Abstract Intelligible
 
 > I may not be the sharpest knife in the drawer, but I've read through this a few times and still can't quite make out what the talk is about.
 
-> I sort of get the topic but I'm not sure how "real world" it is.  If this is just about potential solutions that haven't been validated in a real world context, it would have little value.
-
 > This is really jumbled. I can just about figure out what the talk's going to be about, but an attendee shouldn't have to. 
-
-> Really struggling to even get my head around the abstract. The usecase also doesn't seem too compelling based on what I've understood.
 
 > I've read an abstract a few times. and I still don't understand what this talk is about
 
-> Thin on details, still don't know what the talk is about.
+💁 TIP: Don’t make people have to play detective and make assumptions about what your talk is about. As with the point about abstracts that are too brief, abstracts that are too…well…abstract will also struggle. The program committee needs to have a clear picture of what your talk is about, what you'll cover, what the audience will learn from it. 
 
-> I'm really not sure what this talk is about.
-
-## Sometimes you just can’t win… `:lolsob:`
-
+## Sometimes You Just Can’t Win… `:lolsob:`
 
 > The scope feels too narrow[…]
 
@@ -178,6 +114,6 @@ Here are some of the headline mistakes that I've seen made, along with the quote
 
 ''''
 
-## So that's not *what* to do…but what *should* I do? 
+## More Abstract Writing Advice
 
-For concrete advice on writing a good abstract, check out link:/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game/[this article] that I wrote, and https://developer.confluent.io/podcast/tips-for-writing-abstracts-and-speaking-at-conferences/[this podcast] that I recorded with my colleague and fellow program committee member https://twitter.com/krisajenkins[Kris Jenkins].
+For more advice on writing a good abstract, check out link:/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game/[this article] that I wrote, and https://developer.confluent.io/podcast/tips-for-writing-abstracts-and-speaking-at-conferences/[this podcast] that I recorded with my colleague and fellow program committee member https://twitter.com/krisajenkins[Kris Jenkins].
