--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -22,7 +22,7 @@ There were some common patterns I saw, and I thought it would be useful to share
 
 <!--more-->
 
-Here are some of the headline mistakes that I've seen made, along with the quoted comments from the program committee when the reviewed the abstract in question…
+Here are some of the headline mistakes that I've seen made, along with the quoted comments from the program committee when they reviewed the abstract in question…
 
 ## A Good Title is Not Enough
 
