--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -40,7 +40,7 @@ Here are some of the headline mistakes that I've seen made, along with the quote
 
 > Fun theming but they've missed out the detail...
 
-💁 TIP: Making your abstract jump out by giving it a good theme or story can be a winning formula — but only if coupled with a solid background and explanation too. Think of it as the icing on the cake. No-one wants to eat the whole bowl of icing itself.
+💁 TIP: Making your abstract jump out by giving it a good theme or story can be a winning formula — but only if coupled with a solid background and explanation too. Think of the clever stuff as the icing on the cake. No-one wants to eat the whole bowl of icing itself.
 
 ## The Program Committee Are Rooting for You to Succeed - but a Bad Abstract Is a Bad Abstract
 
@@ -111,6 +111,8 @@ Another example would be "From Zero to Hero"-esque titles (of which https://talk
 > this looks like a nicely focused topic […]
 
 (these comments were left by two reviewers for the very same abstract)
+
+💁 TIP: Perhaps you've written the best abstract in the world, and still got your talk rejected. Don't be disheartened. Conference speaking is a numbers game and even the seasoned professionals who do this _for a living_ will get plenty of rejections (FWIW my success rate is around 34%).
 
 ''''
 
