--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -60,7 +60,7 @@ Here are some of the headline mistakes that I've seen made, along with the quote
 
 > Is the title’s reference appropriate for a tech conference?
 
-> If accepted, I recommend we re-title the talk to avoid negative wording against people learning a technology for the first time.
+> If accepted, I recommend we re-title the talk to avoid negative wording
 
 💁 TIP: Be conscious of your title's negative meanings and/or cultural resonances. A good example would be "_Make <x> Great Again_" which was a popular pattern for titles on the conference circuit in previous years. Basing your talk title on the https://en.wikipedia.org/wiki/Make_America_Great_Again#Use_by_Donald_Trump[campaign slogan of a controversial politician] might alienate some of your audience. 
 
