--- a/content/post/learn-from-their-mistakes.adoc
+++ b/content/post/learn-from-their-mistakes.adoc
@@ -64,7 +64,7 @@ Here are some of the headline mistakes that I've seen made, along with the quote
 
 💁 TIP: Be conscious of your title's negative meanings and/or cultural resonances. A good example would be "_Make <x> Great Again_" which was a popular pattern for titles on the conference circuit in previous years. Basing your talk title on the https://en.wikipedia.org/wiki/Make_America_Great_Again#Use_by_Donald_Trump[campaign slogan of a controversial politician] might alienate some of your audience. 
 
-Another example would be "From Zero to Hero"-esque titles (of which https://talks.rmoff.net/Itynf7[I've been guity] in the past). Some people may feel that referring to people new to a subject as "zeros" (and experts as "heros") doesn't necessarily help propogate the kind of respectful community we'd like. 
+Another example would be "From Zero to Hero"-esque titles (of which https://talks.rmoff.net/Itynf7[I've been guilty] in the past). Some people may feel that referring to people new to a subject as "zeros" (and experts as "heros") doesn't necessarily help propogate the kind of respectful community we'd like. 
 
 ## You Might Think You Don’t Need to Write Much of an Abstract, but the Program Committee Will Disagree
 
