Add branching to readme

--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,8 @@ docker run --rm -it \
 
 [source,bash]
 ----
+git checkout -b my_new_post
+
 docker run --rm -it \
   -v $(pwd):/src \
   klakegg/hugo:0.85.0-asciidoctor-onbuild \
