Unmark as draft

--- a/content/post/lightning_talks.adoc
+++ b/content/post/lightning_talks.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: '⚡️ Writing an abstract for a lightning talk ⚡️'
 date: "2022-08-31T11:13:38Z"
 image: "/images/2022/08/h_IMG_8234.jpeg"
