--- a/content/post/current_program_building.adoc
+++ b/content/post/current_program_building.adoc
@@ -35,7 +35,13 @@ This is just the beginning of the process. If we built a program on abstract sco
 
 image:/images/2022/08/3FYCQjotXgAAzty-.png[List of the six passes that the program content goes through]
 
-One bit of data that I thought would be interesting to compare was the speaker ratings for the previous Kafka Summit with the abstract ratings for the same sessions. How correlated is the abstract rating with the resulting talk delivery? 
+One of the things that the program committee does to help counteract the somewhat blunt "Average Rating" is provide comments for many of the submissions, which provides extra colour and context for the rating: 
+
+image::/images/2022/08/comments.png[Some comments from the program committee about an abstract]
+
+You can read an analysis of some of the patterns I saw in the comments in link:/2022/07/20/how-to-write-a-good-tech-conference-abstract-learn-from-the-mistakes-of-others/[another article] I wrote recently. 
+
+Another bit of data that I thought would be interesting to compare was the speaker ratings for the previous Kafka Summit with the abstract ratings for the same sessions. How correlated is the abstract rating with the resulting talk delivery? 
 
 First up, a huge caveat. Speaker rating data is definitely sketchy at best. For Kafka Summit it's collected through an app (that not everyone will have installed), not everyone leaves a rating, probably people who feel most strongly will take the time to leave a rating…
 
@@ -59,7 +65,7 @@ image::/images/2022/08/6FYCUIDAWYAA5R09.png[]
 What conclusions are there to draw from this? Firstly, the abstract isn't *everything*. But does that mean you can put in a crap abstract and expect to be accepted because it might turn out to be a 💎diamond in the rough? NO! 🙊 
 Per the above data, the *really bad* abstracts (bottom quartile) just don't get accepted. Period🛑
 
-Make sure you put your best work into a good abstract because it gives you the best fighting chance. link:/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game/[This blog] and link:/2022/07/20/how-to-write-a-good-tech-conference-abstract-learn-from-the-mistakes-of-others/[this one] gives you some advice.
+Make sure you put your best work into a good abstract because it gives you the best fighting chance. link:/2020/01/16/how-to-win-or-at-least-not-suck-at-the-conference-abstract-submission-game/[This blog] and link:/2022/07/20/how-to-write-a-good-tech-conference-abstract-learn-from-the-mistakes-of-others/[this one] gives you some advice, as does https://developer.confluent.io/podcast/tips-for-writing-abstracts-and-speaking-at-conferences/[this podcast].
 
 If we don't pick abstracts based on score alone, then what else factors into that? The link:#passes[screenshot earlier] in the thread gives you some clues. For example, is the subject relevant to the audience at the conference? Is there a good representation of different technologies? 
 
