Add screencap of WAT

--- a/content/post/lightning_talks.adoc
+++ b/content/post/lightning_talks.adoc
@@ -80,3 +80,7 @@ A good lightning talk is *harder* to do than a breakout session in some ways. Yo
 '''
 
 *What does a good lightning talk look like?* For me, the canonical example has to be this legendary one from https://twitter.com/garybernhardt[@garybernhardt] - https://www.destroyallsoftware.com/talks/wat[WAT]
+
++++
+<a target="_blank" href="https://www.destroyallsoftware.com/talks/wat"><img src="https://www.destroyallsoftware.com/assets/posters/talks/wat.poster-4f5425901c10ffeaceb61f82e25dc40b9212aadf078cead0dc6ffe40696e2bec.png" alt="screencap of WAT opening slide"></a>
++++
