--- a/content/post/data_ecosystem_notes_2022.adoc
+++ b/content/post/data_ecosystem_notes_2022.adoc
@@ -78,9 +78,10 @@ The world of software has been blown apart, driven in my opinion by the internet
 
 And speaking of a dozen data stores, nowadays there are stores specialised for every purpose. NoSQL, oldSQL, someSQL, newSQL and everywhere in between. Graph, relational, and document. AWS in particular has leant into this, mirroring what's available to run yourself in their plethora of SaaS offerings in the data space. 
 
+The data engineering world has realised, if not fully accepted, that software engineering practices including testing, CI/CD, etc are important - see https://www.youtube.com/watch?v=uixZ7NcGoeE&t=450s[this interesting discussion] on the shift left of data engineering.
+
 For the rest of the article I'm going to focus on the software side of things. 
 
-----
 
 separate articles: 
 
@@ -101,7 +102,7 @@ It seems that nowadays you're as likely to be writing code (probably in Python, 
 
 A plethora of tools have sprung up to orchestrate these kinds of pipelines, with https://seattledataguy.substack.com/p/should-you-use-apache-airflow[Airflow] a common one. 
 
-## Reference Architectures for Handling Data
+## Reference Architectures
 
 Some things change…and some things stay the same. 9 years ago Oracle published their https://www.oracle.com/technetwork/database/bigdata-appliance/overview/bigdatarefarchitecture-2297765.pdf[reference archicture for Information Management and Big Data]. Whilst bits of it haven't aged so well, the core concept of how data is sourced, stored, and served seems to match up almost exactly with Databricks' https://www.databricks.com/glossary/medallion-architecture["Medallion Architecture"]. Which is a good thing - trends come and go but if as an industry we've settled on a common approach then it makes everyone's lives easier!
 
