--- a/README.adoc
+++ b/README.adoc
@@ -25,6 +25,20 @@ docker run --rm -it \
   new content/post/my_new_post.adoc
 ----
 
+== Link checking
+
+Run this locally to check the local state once the server is running: 
+
+[source,bash]
+----
+docker run --init \
+           -it \
+           -v `pwd`:/public \
+           lycheeverse/lychee .
+----
+
+Link checking is also configuring as an action for any PR, and as a scheduled action. 
+
 == Broken theme
 
 The theme used (https://github.com/xaprb/story[story]) is no longer maintained, and is broken with the latest version of Hugo (`0.96.0`). It may be broken with earlier versions too (I've not built it for a while). It does work with `0.82.1``.
