--- a/README.adoc
+++ b/README.adoc
@@ -31,10 +31,7 @@ Run this locally to check the local state once the server is running:
 
 [source,bash]
 ----
-docker run --init \
-           -it \
-           -v `pwd`:/public \
-           lycheeverse/lychee .
+docker run -v $PWD:/check ghcr.io/untitaker/hyperlink:0.1.26 /check/public/
 ----
 
 Link checking is also configuring as an action for any PR, and as a scheduled action. 
