--- a/README.adoc
+++ b/README.adoc
@@ -31,6 +31,7 @@ Run this locally to check the local state once the server is running:
 
 [source,bash]
 ----
+docker run --rm -it -v $(pwd):/src -p 1313:1313 klakegg/hugo:0.85.0-asciidoctor-onbuild
 docker run -v $PWD:/check ghcr.io/untitaker/hyperlink:0.1.26 /check/public/
 ----
 
